<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.t.p.gy.myrestaurantapp.ContactActivity">

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/phoneTextString"
        android:textAlignment="center"
        android:textSize="18sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/phoneNumberString"

        app:layout_constraintTop_toBottomOf="@id/phoneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="24dp"
        />



    <ImageButton
        android:id="@+id/phoneImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="V, 1:1"
        android:onClick="startCall"
        android:scaleType="fitCenter"

        android:background="@android:color/white"
        app:srcCompat="@drawable/phone_button"

        app:layout_constraintLeft_toLeftOf="@id/phoneNumber"
        app:layout_constraintRight_toRightOf="@id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber"

        />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="3dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneImageButton"

        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactEmailTextString"
        android:textAlignment="center"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="8dp"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contactEmailEditTextString"
        android:inputType="textMultiLine"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText"

        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactEmailButtonString"
        android:onClick="sendEmail"

        app:layout_constraintTop_toBottomOf="@id/emailEditText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />





</android.support.constraint.ConstraintLayout>
